2007-01-26  Jeremy Cribb <jcribb@email.unc.edu>
	* raw2avi.m: fixed typo.
	* raw2img.m: outputted scaled image now defaults to unscaled image.

2006-07-20  Jeremy Cribb <jcribb@email.unc.edu>
	* clipraw.m:  added cropping functionality.  added variable output to available memory or to a file.  There is no way to put the new position info into the rawfile format so crop at your own risk.

2006-06-19  Jeremy Cribb <jcribb@email.unc.edu>
	* get_mips.m: now you can choose 'min'imum or 'max'imum intensity projection directly in get_mips.

2006-05-22  Jeremy Cribb <jcribb@email.unc.edu>
	* raw2avi.m: removed an experimental change to the code (committed by mistake).

2006-04-24  Jeremy Cribb <jcribb@email.unc.edu>
	* raw2img.m: fixed error when end_frame wasn't defined.  Now it sets end_frame to the number of frames in the raw file.

2006-04-03  Jeremy Cribb <jcribb@email.unc.edu>
	* video_psd.m: added.  inputs video tracking data and attaches psd info to structure.
	* raw2avi.m: updated some documentation.  mainly playing around with video codecs for video compression.
	
2005-12-14  Jeremy Cribb <jcribb@email.unc.edu>
	* raw2img.m: added stride parameter.
	* raw_balance_gain.m: for a raw video, this balances the gain values for both channels in each pulnix raw image and saves a new raw file.
	* raw_swaplines.m: for a raw video, this corrects the swapped lines problem for each frame.  This follows the same algorithm in gluitake.

2005-12-05  Jeremy Cribb <jcribb@email.unc.edu>
	* get_mips.m: added start and stop frames to parameter list.

2005-11-16  Jeremy Cribb <jcribb@email.unc.edu>
	* mip.m: fixed an off-by-one bug that would break code whenever capturing intensity projections with a stride of 1.

2005-11-15   Jeremy Cribb <jcribb@email.unc.edu>
	* raw_mean_subtract.m added. performs mean subtraction from a .raw file and saves a new .raw file

2005-11-15  Jeremy Cribb <jcribb@email.unc.edu>